examples/invalid_feature_secret/missing_secret_scope.argx
module invalid.missing_secret_scope
provider OpenAI { kind external enabled false dry_run_only true requires feature_flag requires approval }
secret S { handle "OPENAI_API_KEY" provider OpenAI access denied source none }
